Remove "inkdrop-" in name
ipm says: Please do not include "inkdrop" in your plugin name as it is redundant.

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-	"name": "inkdrop-natural-datetime",
+	"name": "natural-datetime",
 	"version": "0.0.0",
 	"description": "Inkdrop plugin to insert datetime with natural language",
 	"main": "./src/index.js",
